# video-translator-desktop

./: .env.example  .gitignore  LICENSE  README.md  build.spec  pyproject.toml  requirements.txt
src/video_translator/: __init__.py  __main__.py  app.py  config.py  ffmpeg_utils.py  pipeline.py  segments.py  soniox_client.py  timeline.py  tts.py
src/video_translator/gui/: main_window.py  settings_dialog.py
tests/: test_ffmpeg_utils.py  test_segments.py  test_timeline.py
