[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translator-desktop"
version = "0.1.0"
description = "Desktop app: dịch âm thanh trên video → lồng tiếng Việt (Soniox + Edge TTS)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Văn Du", email = "vdu87610@gmail.com" }]
dependencies = [
    "customtkinter>=5.2.2",
    "edge-tts>=7.0.0",
    "soniox>=1.0.0",
    "python-dotenv>=1.0.1",
    "imageio-ffmpeg>=0.5.1",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "pyinstaller>=6.10.0",
]

[project.scripts]
video-translator = "video_translator.app:main"

[project.gui-scripts]
video-translator-gui = "video_translator.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
